tests/fail/expr/while.rs
fn main() {
    one_assert::assert!(while false {});
}
